acerto da verificação

--- a/home/newHome.html
+++ b/home/newHome.html
@@ -16,7 +16,7 @@
             </div>
             <div class="infor">
                 <div class="semback">
-                    <p><button>Agendar</button></p>
+                    <p><button onclick="godashboard()">Agendar</button></p>
                 </div>
                 <div class="comback">
                     <p><button type="button" onclick="logout()">Sair</button></p>
