--- a/newindex/newindex.html
+++ b/newindex/newindex.html
@@ -29,7 +29,7 @@
             </nav>
         </div>
     </header>
-    <section id="home" class="hero">
+    <section id="home" class="hero" >
         <div class="container">
             <div class="hero-content">
                 <h1>Estilo e Cuidado para o Homem Moderno</h1>
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="/img/imagemdefundo.jpeg" alt="">
+                <img src="" alt="">
             </div>
         </div>
     </section>
@@ -80,21 +80,21 @@
                     <h3>Corte de Cabelo</h3>
                     <p>Cortes clássicos, modernos e personalizados para todos os estilos.</p>
                     <span>A partir de R$XX</span>
-                    <a href="#agendamento" class="cta-secondary">Agendar Corte</a>
+                    <a href="#agendamento" class="cta-secondary" onclick="gologin()">Agendar Corte</a>
                 </div>
                 <div class="servico">
                     <img src="/img/servico-barba.jpeg" alt="Barba">
                     <h3>Barba</h3>
                     <p>Modelagem, corte, alinhamento e tratamento completo para sua barba.</p>
                     <span>A partir de R$YY</span>
-                    <a href="#agendamento" class="cta-secondary">Agendar Barba</a>
+                    <a href="#agendamento" class="cta-secondary" onclick="gologin()">Agendar Barba</a>
                 </div>
                 <div class="servico">
                     <img src="/img/servico-tratamento.jpeg" alt="Tratamentos Capilares">
                     <h3>Tratamentos Capilares</h3>
                     <p>Hidratação, revitalização e outros cuidados para a saúde do seu cabelo.</p>
                     <span>A partir de R$ZZ</span>
-                    <a href="#agendamento" class="cta-secondary">Ver Tratamentos</a>
+                    <a href="#agendamento" class="cta-secondary" onclick="gologin()">Ver Tratamentos</a>
                 </div>
             </div>
             <a href="#agendamento" class="cta-primary">Ver Todos os Serviços e Agendar</a>
