--- a/register/cadastra.html
+++ b/register/cadastra.html
@@ -132,6 +132,7 @@
 </body>
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-firestore-compat.js"></script>
 
 <script src="../js/firebase-init.js"></script>
 <script src="../js/go.js"></script>
