--- a/agendamento/dashboard-agendamento.html
+++ b/agendamento/dashboard-agendamento.html
@@ -16,7 +16,7 @@
             </div>
             <nav class="menu">
                 <a href="#" class="active"><i class="fas fa-calendar-check"></i> Agendar Horário</a>
-                <a href="#"><i class="fas fa-history"></i> Meus Agendamentos</a>
+                <a href="#" onclick="gonewHome()"><i class="fas fa-history"></i> Meus Agendamentos</a>
                 <a href="#"><i class="fas fa-user-circle"></i> Meu Perfil</a>
                 <a href="/home/newHome.html"><i class="fas fa-sign-out-alt"></i> Sair</a>
             </nav>
@@ -81,6 +81,39 @@
         </main>
     </div>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+<div id="modal-editar-agendamento" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.4); z-index:1000; align-items:center; justify-content:center;">
+  <div style="background:#fff; padding:30px 20px; border-radius:10px; max-width:350px; width:90%; margin:auto; position:relative;">
+    <h3>Editar Agendamento</h3>
+    <form id="form-editar-agendamento">
+      <div class="form-group">
+        <label for="editar-servico">Serviço:</label>
+        <select id="editar-servico" required>
+          <option value="corte-cabelo">Corte de Cabelo</option>
+          <option value="barba">Barba</option>
+          <option value="sobrancelha">Sobrancelha</option>
+          <option value="progressiva">Progressiva</option>
+          <option value="descolorir-cabelo">Descolorir Cabelo</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="editar-data">Data:</label>
+        <input type="date" id="editar-data" required>
+      </div>
+      <div class="form-group">
+        <label for="editar-horario">Horário:</label>
+        <select id="editar-horario" required>
+          <option value="">Selecione a data primeiro</option>
+        </select>
+      </div>
+      <div style="display:flex; gap:10px; margin-top:15px;">
+        <button type="submit" class="btn-edit">Salvar</button>
+        <button type="button" id="btn-cancelar-edicao" class="btn-cancel">Cancelar</button>
+      </div>
+    </form>
+  </div>
+</div>
+
 </body>
       <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
       <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
