--- a/register/cadastra.html
+++ b/register/cadastra.html
@@ -130,17 +130,14 @@
     </footer>
     </nav>
 </body>
-<!-- Sempre coloque os scripts do Firebase ANTES do seu JS de registro -->
+
+
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-firestore-compat.js"></script>
+
 <script src="/js/firebase-init.js"></script>
 <script src="/register/registro.js"></script>
-
-<script src="../js/go.js"></script>
-
-
-
-
+<script src="/js/go.js"></script>
 
 </html>
