--- a/agendamento/dashboard-agendamento.html
+++ b/agendamento/dashboard-agendamento.html
@@ -26,7 +26,7 @@
             <header>
                 <h1>Agendar Horário</h1>
                 <div class="user-greeting">
-                    Olá <span id="nome-cliente" ></span>!
+                    Olá, <span id="nome-cliente" ></span>!
                 </div>
             </header>
 
