atualizações de primeira vista

--- a/newindex/newindex.html
+++ b/newindex/newindex.html
@@ -97,7 +97,7 @@
                     <a href="#agendamento" class="cta-secondary" onclick="gologin()">Ver Tratamentos</a>
                 </div>
             </div>
-            <a href="#agendamento" class="cta-primary">Ver Todos os Serviços e Agendar</a>
+            <a href="#agendamento" onclick="gologin()" class="cta-primary">Ver Todos os Serviços e Agendar</a>
         </div>
     </section>
 
@@ -133,14 +133,14 @@
                 </div>
             </div>
             <div class="mapa">
-                <iframe src="https://maps.app.goo.gl/d4TogLfGuM35Xu4G7" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=..." width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; [Ano Atual] [Nome da Barbearia]. Todos os direitos reservados.</p>
+            <p>&copy; 2025 cutRig. Todos os direitos reservados.</p>
             <div class="social-links">
                 <a href="#"><img src="/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
                 <a href="#"><img src="/img/instagram.png" alt="Instagram"></a>
