--- a/register/cadastra.html
+++ b/register/cadastra.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logotop">
-                <a href="#home">
+                <a href="/newindex/newindex.html">
                     <img src="/img/logo-site.jpeg" alt="Logo do site">
                 </a>
             </div>
