--- a/global/global.html
+++ b/global/global.html
@@ -11,9 +11,11 @@
 <body>
     <header>
         <div class="topo">
-            <div id="imglogo">
+            <div class="logotop">
                 <a href="/newindex/newindex.html">
-                    <img class="ing" src="/img/logo-site.jpeg" alt="logo"></a>
+                    <img src="/img/logo-site.jpeg" alt="Logo do site">
+                </a>
+                <span class="nome-barbearia">RightCut Barbearia</span>
             </div>
             <div class="infor">
                 <div class="semback">
