--- a/newindex/newindex.html
+++ b/newindex/newindex.html
@@ -13,9 +13,10 @@
     <header>
         <div class="container">
             <div class="logotop">
-                <a href="#home" >
+                <a href="#home">
                     <img src="/img/logo-site.jpeg" alt="Logo do site">
                 </a>
+                <span class="nome-barbearia">RightCut Barbearia</span>
             </div>
             <nav>
                 <ul>
@@ -29,7 +30,7 @@
             </nav>
         </div>
     </header>
-    <section id="home" class="hero" >
+    <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
                 <h1>Estilo e Cuidado para o Homem Moderno</h1>
@@ -151,4 +152,5 @@
     </footer>
 </body>
 <script src="/js/go.js"></script>
+
 </html>
