--- a/register/cadastra.html
+++ b/register/cadastra.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/register/cadastrar.css">
+    <link rel="stylesheet" href="/global/glob.css">
     <title>cadastra</title>
 </head>
 
@@ -15,6 +16,7 @@
                 <a href="/newindex/newindex.html">
                     <img src="/img/logo-site.jpeg" alt="Logo do site">
                 </a>
+                <span class="nome-barbearia">RightCut Barbearia</span>
             </div>
             <nav>
                 <ul>
