--- a/home/newHome.html
+++ b/home/newHome.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/global/glob.css">
     <link rel="stylesheet" href="newHome.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:700|Montserrat:700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <header>
         <div class="topo">
-            <div id="imglogo">
+            <div id="imglogo" style="display: flex; align-items: center; gap: 12px;">
                 <a href="/newindex/newindex.html">
-                    <img class="ing" src="/img/logo-site.jpeg" alt="logo"></a>
+                    <img id="avatar-logo" class="ing" src="/img/logo-site.jpeg" alt="logo">
+                </a>
+                <span id="nome-usuario" style="font-weight:600; font-size:1.1rem; color:#222;"></span>
             </div>
             <div class="infor">
                 <div class="semback">
