--- a/login/login.html
+++ b/login/login.html
@@ -20,13 +20,10 @@
             </div>
             <div class="infor">
                 <div class="semback">
-                    <p><button onclick="gonewIndex()">Pagina inicial</button></p>
-                </div>
-                <div class="semback">
-                    <p><button onclick="">informações</button></p>
+                    <p><button onclick="gonewIndex()">Home</button></p>
                 </div>
                 <div class="comback">
-                    <p><button>Contatos</button></p>
+                    <p><button onclick="goregister()">cadastrar</button></p>
                 </div>
             </div>
         </div>
