--- a/newindex/newindex.html
+++ b/newindex/newindex.html
@@ -25,6 +25,7 @@
                     <li><a href="#servicos">Serviços</a></li>
                     <li><a href="#galeria">Galeria</a></li>
                     <li><a href="#contato">Contato</a></li>
+                    <li><button class="semBack" type="button" onclick="goregister()">cadastre-se</button></li>
                     <li><button type="button" onclick="gologin()">Agende Seu Horário</button></li>
                 </ul>
             </nav>
