--- a/agendamento/dashboard-agendamento.html
+++ b/agendamento/dashboard-agendamento.html
@@ -17,7 +17,7 @@
             <nav class="menu">
                 <a href="#" class="active"><i class="fas fa-calendar-check"></i> Agendar Horário</a>
                 <a href="#" onclick="gonewHome()"><i class="fas fa-history"></i> Meus Agendamentos</a>
-                <a href="#"><i class="fas fa-user-circle"></i> Meu Perfil</a>
+                <a href="#" onclick="goperfil()"><i class="fas fa-user-circle"></i> Meu Perfil</a>
                 <a href="/home/newHome.html"><i class="fas fa-sign-out-alt"></i> Sair</a>
             </nav>
         </aside>
