--- a/register/cadastra.html
+++ b/register/cadastra.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/register/cadastrar.css">
-    <link rel="stylesheet" href="/global/glob.css">
+    <link rel="stylesheet" href="">
     <title>cadastra</title>
 </head>
 
